--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ header[role="header"].header-top,header[role="header"].header-top figure{ positi
 
 header[role="header"].header-top .container{ position:absolute; left:0; right:0; top:0;z-index:2;padding-top:41px}
 
-header[role="header"].header-top figure::after{ content:""; position:absolute; left:0; right:0; top:0; bottom:0; background-color:rgba(29,23,36,0.5); z-index:1}
+header[role="header"].header-top figure::after{ content:""; position:absolute; left:0; right:0; top:0; bottom:0; z-index:1}
 
 header[role="header"].header-top hgroup h1{ padding:0; margin:0; position:relative; z-index:2}
 
@@ -220,7 +220,7 @@ header[role="header"].header-top hgroup nav ul{ text-align:right; padding:0; mar
 
 header[role="header"].header-top hgroup nav ul > li{ float:none; display:inline-block; text-transform:uppercase; font-size:12px; font-weight:600; letter-spacing:2px}
 
-header[role="header"].header-top hgroup nav ul > li > a{ color:#FFF; line-height:29px; padding-bottom:5px; padding-top:0; padding-left:11px; padding-right:12px; border-bottom:3px solid transparent;}
+header[role="header"].header-top hgroup nav ul > li > a{ color:#5e5e64; line-height:29px; padding-bottom:5px; padding-top:0; padding-left:11px; padding-right:12px; border-bottom:3px solid transparent;}
 
 header[role="header"].header-top hgroup nav ul > li:hover a,header[role="header"].header-top hgroup nav ul>li.active a,header[role="header"].header-top hgroup nav ul>li.active:hover a{ border-color:#6bb551; background-color:transparent!important;color:#FFF!important;}
 
@@ -234,7 +234,7 @@ transition-duration: 0.8s;transition-property: all;transition-timing-function: e
 
 
 
-header[role="header"].header-top .navbar-fixed-top{background-color:rgba(0,0,0,1); padding:5px 0}
+header[role="header"].header-top .navbar-fixed-top{background-color:rgba(0,0,0,0.5); padding:5px 0}
 
 header[role="header"].header-top .navbar-fixed-top .container{ padding-top:0; position:static}
 
@@ -294,7 +294,12 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 
 /*== Four Box Pan ==*/
 
-.four-box-pan{ overflow:hidden; padding-top:81px}
+.four-box-pan{ overflow:hidden; padding-top:81px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
 
 .four-box-pan figure{ margin:0 auto; display:block; border-radius:100%; width:98px; height:98px; border:2px solid #6bb551; text-align:center; line-height:98px; color:#6bb551; font-size:40px}
 
@@ -310,7 +315,7 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 
 /*== Section Two ==*/
 
-.section-two{ background-color:#f7f7f8; margin-top:80px; overflow:hidden}
+.section-two{ margin-top:80px; overflow:hidden}
 
 .section-two section figure{background-position:50% 0; background-size:cover; background-repeat:no-repeat; background-attachment:fixed; min-height:593px}
 
@@ -346,7 +351,7 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 
 /*== Slider ==*/
 
-.slider-pan{ padding-top:87px;padding-bottom:91px}
+.slider-pan{ padding-top:160px;padding-bottom:91px}
 
 .slider-pan section article{ font-size:21px; line-height:36px; font-weight:400; padding-top:38px}
 
@@ -370,7 +375,7 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 
 /*== Section Three ==*/
 
-.section-three{ background-color:#6bb551; padding-top:87px; padding-bottom:156px}
+.section-three{ padding-top:60px; padding-bottom:156px}
 
 .section-three header[role="title-page"]{ padding-bottom:83px}
 
@@ -531,3 +536,61 @@ border-bottom-right-radius: 3px;}
 .footer .copy{ padding:0; margin:0; color:#b6b6b6; font-size:13px; line-height:17px; font-weight:300; padding-top:7px; letter-spacing:1px}
 .footer .copy a{color:#b6b6b6;}
 .footer .fa-heart { color: #e84545; font-size: 11px; margin: 0 2px;}
+
+@keyframes shakeY {
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(5px);
+	}
+	100% {
+		transform: translateY(0);
+	}
+}
+
+@keyframes shakeTouch {
+	0% { transform: translateY(0); }
+	50% { transform: translateY(30px); }
+	100% { transform: translateY(0); }
+}
+
+.shaking {
+	animation: shakeTouch 0.3s;
+}
+
+.movie-wrap {
+	position: relative;
+	padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+	height: 0;
+	overflow: hidden;
+}
+
+.movie-wrap iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#mySection {
+	background-image: url("/images/forest-bg.png");
+	background-repeat: no-repeat;
+	background-size: auto 100%;
+	background-position: top center;
+
+	height: auto;
+	z-index: -9999;
+}
+
+#mySection ul li {
+	font-size: 21px; /* 任意のフォントサイズに変更 */
+}
+
+.line {
+	position: relative;  /* 忘れずに追加します */
+	padding: 10px 0;
+	background: linear-gradient(to bottom, white 0%, white 100%) no-repeat 0 100%;
+	background-size: 100% 3px;
+}
