--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,8 @@ header[role="title-page"] h4:after,header[role="title-page"] h4:after,header[rol
 
 header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size:31px; line-height:36px; font-weight:600; padding-top:2px}
 
+.section-zero{ padding-top:20px}
+
 /*== Section One ==*/
 
 .section-one{ padding-top:87px}
@@ -409,7 +411,7 @@ transform:scale(1.1);}
 
 /*== Section Three ==*/
 
-.section-four{ padding-top:86px; padding-bottom:102px; background-color:#f7f7f8}
+.section-four{ padding-top:86px; padding-bottom:102px;}
 
 .section-four header[role="title-page"]{ padding-bottom:63px}
 
@@ -519,7 +521,7 @@ border-bottom-right-radius: 3px;}
 
 /*== Footer ==*/
 
-.footer{ background-color:#333333; padding-top:101px; padding-bottom:104px; text-align:center}
+.footer{ background-color:#333333; padding-top:50px; padding-bottom:50px; text-align:center}
 
 .socil-icons a{ display:inline-block; text-align:center; color:#333333; font-size:22px; line-height:50px; width:50px; height:50px; border-radius:100%; background-color:#4a4a4a; margin:0 4.9px}
 
@@ -551,7 +553,7 @@ border-bottom-right-radius: 3px;}
 
 @keyframes shakeTouch {
 	0% { transform: translateY(0); }
-	50% { transform: translateY(30px); }
+	50% { transform: translateY(10%); }
 	100% { transform: translateY(0); }
 }
 
@@ -584,7 +586,7 @@ border-bottom-right-radius: 3px;}
 	z-index: -9999;
 }
 
-#mySection ul li {
+#mySection p {
 	font-size: 21px; /* 任意のフォントサイズに変更 */
 }
 
@@ -593,4 +595,10 @@ border-bottom-right-radius: 3px;}
 	padding: 10px 0;
 	background: linear-gradient(to bottom, white 0%, white 100%) no-repeat 0 100%;
 	background-size: 100% 3px;
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
